create github pages

--- a/html.html
+++ b/html.html
@@ -43,16 +43,16 @@
                         <img src="assets/images/logo-small-icon-only-122x122.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="https://mobirise.co">Mica's Art</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-info display-4" href="https://mobirise.co">Mica's Art</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-black display-4" href="index.html">
+                    <a class="nav-link link text-info display-4" href="index.html">
                         Portfolio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link text-black display-4" href="https://mobirise.co">
+                    <a class="nav-link link text-info display-4" href="https://mobirise.co">
                         About me &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a>
                 </li></ul>
             
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="cid-rQzkLLM6dN mbr-fullscreen mbr-parallax-background" id="header2-3c">
+<section class="engine"><a href="https://mobirise.info/f">easy web maker</a></section><section class="cid-rQzkLLM6dN mbr-fullscreen mbr-parallax-background" id="header2-3c">
 
     
 
