--- a/html.html
+++ b/html.html
@@ -43,7 +43,7 @@
                         <img src="assets/images/logo-small-icon-only-122x122.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-info display-4" href="https://mobirise.co">Mica's Art</a></span>
+                
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best free html templates</a></section><section class="cid-rQzkLLM6dN mbr-fullscreen mbr-parallax-background" id="header2-3c">
+<section class="engine"><a href="https://mobirise.info/b">create a site for free</a></section><section class="cid-rQzkLLM6dN mbr-fullscreen mbr-parallax-background" id="header2-3c">
 
     
 
