create github pages

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="https://mobirise.co">
-                        <img src="assets/images/logo-small-icon-only-122x122.png" alt="Mobirise" title="" style="height: 3.8rem;">
+                        <img src="assets/images/logo-small-icon-only-122x122.png" alt="Mobirise" title="" style="height: 7rem;">
                     </a>
                 </span>
                 
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free web design templates</a></section><section class="header1 cid-rQyQ1RXkTX mbr-parallax-background" id="header1-15">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="header1 cid-rQyQ1RXkTX mbr-parallax-background" id="header1-15">
 
     
 
@@ -996,7 +996,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="wa2CCHlZcdtRE2UB/SBQDP8noeeb/18S6SCW0mLyxrh9b0+OPQjfRayOOJrlia3t3oBB3WloelezxDs0UW629WQ5BL6O5AuJekm/WReHit5QjInn3UC7O2hXn3A1Y8k1">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Wd6+O0doMtGrMsYOWvgX/eqOML7otgtXnXD/5aAs26Ilfzs63EEdNNCBU5Md027g2I/GiJsNWtPDmYDQpwNUWzPh+WGzl0b4NxzSUlCTLB3ly/LchjQ53rimPU+mS1ST">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
