create github pages

--- a/html.html
+++ b/html.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><section class="cid-rQzkLLM6dN mbr-fullscreen mbr-parallax-background" id="header2-3c">
+<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="cid-rQzkLLM6dN mbr-fullscreen mbr-parallax-background" id="header2-3c">
 
     
 
@@ -97,7 +97,7 @@
             </div>
 
             <div class="media-content">
-                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-5">About me</h1>
+                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-5">About me ...</h1>
                 
                 <div class="mbr-section-text mbr-white pb-3 ">
                     <p class="mbr-text mbr-fonts-style display-7"><em>I was born and lived in sunny South Africa until 2014 when my husband and I permanently settled in the beautiful city of Stuttgart, Germany. I have been a member of the Württembergischer Art Association since then.
