create github pages

--- a/html.html
+++ b/html.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive web templates</a></section><section class="cid-rQzkLLM6dN mbr-fullscreen mbr-parallax-background" id="header2-3c">
+<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="cid-rQzkLLM6dN mbr-fullscreen mbr-parallax-background" id="header2-3c">
 
     
 
@@ -124,7 +124,7 @@
         <div class="media-container-row">
             <div class="title col-12 align-center">
                 <h2 class="pb-3 mbr-fonts-style display-2">
-                    What the experts say ..</h2>
+                    What two experts say ..</h2>
                 <h3 class="mbr-section-subtitle mbr-light pb-3 mbr-fonts-style display-5">
                     about me and my art</h3>
             </div>
