create github pages

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="https://mobirise.co">
-                         <img src="assets/images/logo-small-icon-only-122x122.png" alt="Mobirise" title="" style="height: 5.1rem;">
+                         <img src="assets/images/logo-small-icon-only-122x122.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://mobirise.co">
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="header1 cid-rQyQ1RXkTX mbr-parallax-background" id="header1-15">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header1 cid-rQyQ1RXkTX mbr-parallax-background" id="header1-15">
 
     
 
