--- a/page4.html
+++ b/page4.html
@@ -41,7 +41,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="https://mobirise.co">
-                         <img src="assets/images/logo-small-icon-only-122x122.png" alt="Mobirise" title="" style="height: 5.1rem;">
+                         <img src="assets/images/logo-small-icon-only-122x122.png" alt="Mobirise" title="" style="height: 3.9rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://mobirise.co">
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best html templates</a></section><section class="mbr-section form1 cid-rSKxCDTWqf" id="form1-66">
+<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="mbr-section form1 cid-rSKxCDTWqf" id="form1-66">
 
     
 
@@ -83,7 +83,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="2uwvBitE/ZI1z+S4r5qYOvMUNfFsBdYl/+z7qKYZURrDEJ/2QAh9XWgD145t5u8qQg4EQDorc3y2Q8wCGFIjHWPokiLDJIicR/hAWgWquoy14p2IUk1cRyXeqcle4f5F">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="SF3aTViVoajivVd+HkumW5zmf/Xi4yk/OaFZK/huzyfhaeN6cdd9KSBXrJvbVO8+itJpRDgxp+iAaz911uY4GucBYVS05Il6mc/5/7N6V4DFgSChEKLPgDQdOLzNQTcp">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
