--- a/page7.html
+++ b/page7.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="cid-rSKztU4phD mbr-fullscreen mbr-parallax-background" id="header2-67">
+<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="cid-rSKztU4phD mbr-fullscreen mbr-parallax-background" id="header2-67">
 
     
 
