--- a/page4.html
+++ b/page4.html
@@ -28,7 +28,7 @@
 
     
 
-    <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-fixed-top navbar-toggleable-sm bg-color transparent">
+    <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-fixed-top navbar-toggleable-sm">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <div class="hamburger">
                 <span></span>
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="mbr-section form1 cid-rSKxCDTWqf" id="form1-66">
+<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="mbr-section form1 cid-rSKxCDTWqf" id="form1-66">
 
     
 
@@ -83,7 +83,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="jKviYRUuk5TV2njH4UQ2L6/oDx249rSz4AyFjYuvvdjBXbjcOnNlXOE1GU3AjAO14al1bQaCov2rJG4yy6AeNno8za/K2L/XcSK2g/PWCO+xo/0eu0VUgZhpFYrFOU1D">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Mx+mM1FFAaMEo6ingrNyKNg54NgAnmOdPyVjn2m/ojZmEWUo5UlWS2SeODgRCDwKlDc6dCqYg7er5BSOipDDVh0EXdPP3k9EZcjkG9y6+Q0YWN5/nssl80Qmttlr/8/T">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
