--- a/page7.html
+++ b/page7.html
@@ -28,7 +28,7 @@
 
     
 
-    <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-fixed-top navbar-toggleable-sm bg-color transparent">
+    <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-fixed-top navbar-toggleable-sm">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <div class="hamburger">
                 <span></span>
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio site templates</a></section><section class="cid-rSKztU4phD mbr-fullscreen mbr-parallax-background" id="header2-67">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="cid-rSKztU4phD mbr-fullscreen mbr-parallax-background" id="header2-67">
 
     
 
