create github pages

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ Referenzen">
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="cid-rQzkLLM6dN mbr-fullscreen mbr-parallax-background" id="header2-3c">
+<section class="engine"><a href="https://mobirise.info/c">website builder</a></section><section class="cid-rQzkLLM6dN mbr-fullscreen mbr-parallax-background" id="header2-3c">
 
     
 
@@ -197,7 +197,7 @@ Referenzen">
     <div class="container">
         <div class="media-container-row">
             <div class="col-md-8 align-center">
-                <h2 class="pb-3 mbr-fonts-style display-1">Folge uns!
+                <h2 class="pb-3 mbr-fonts-style display-1">Folge mir!
                 </h2>
                 <div class="social-list pl-0 mb-0">
                     <a href="https://twitter.com/mobirise" target="_blank">
