--- a/Kontakt.html
+++ b/Kontakt.html
@@ -69,7 +69,7 @@ Details zu den Versandkosten">
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="mbr-section form1 cid-rSKxCDTWqf" id="form1-66">
+<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="mbr-section form1 cid-rSKxCDTWqf" id="form1-66">
 
     
 
@@ -86,7 +86,7 @@ Details zu den Versandkosten">
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="TPYq8/j3PBB8vIGCNeB6mnPRQ89gcdQhOVGM8Kv43vr99gcaGvpihnzi+fsKQ+iTVKH8X0io9fFpUkHUmC/hM3XdSV9UgG2NmAdXsN0nA8rsP4n8A5wqIHsKRf36hNAF">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="PYfPC0uIcWLYjyluxf6tI49r0HGe+4LYxsIHbSpRyRk9mzmCqP0A1v+b43CeFK4+BWW/oeU0PyObq9Llh811NV1Tcdl2gdBTJii/xa8nO2fiwBVFbNIXo+hDXslLAsJ7">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -127,7 +127,7 @@ Details zu den Versandkosten">
         <div class="media-container-row">
             <div class="col-md-8 align-center">
                 <h2 class="pb-3 mbr-fonts-style display-1">
-                    Folge uns!
+                    Folge mir!
                 </h2>
                 <div class="social-list pl-0 mb-0">
                     <a href="https://twitter.com/mobirise" target="_blank">
