--- a/Welcome E.html
+++ b/Welcome E.html
@@ -70,7 +70,7 @@ Testimonials">
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="cid-rSKztU4phD mbr-fullscreen mbr-parallax-background" id="header2-67">
+<section class="engine"><a href="https://mobirise.info/f">simple web creator</a></section><section class="cid-rSKztU4phD mbr-fullscreen mbr-parallax-background" id="header2-67">
 
     
 
@@ -195,8 +195,8 @@ Testimonials">
     <div class="container">
         <div class="media-container-row">
             <div class="col-md-8 align-center">
-                <h2 class="pb-3 mbr-fonts-style display-2">
-                    FOLLOW US!
+                <h2 class="pb-3 mbr-fonts-style display-1">
+                    FOLLOW ME!
                 </h2>
                 <div class="social-list pl-0 mb-0">
                     <a href="https://twitter.com/mobirise" target="_blank">
@@ -229,7 +229,7 @@ Testimonials">
     <div class="container">
         <div class="media-container-row">
             <div class="col-md-8 align-center">
-                <h2 class="pb-3 mbr-section-title mbr-fonts-style display-2">
+                <h2 class="pb-3 mbr-section-title mbr-fonts-style display-1">
                     SHARE THIS PAGE!
                 </h2>
                 <div>
