create github pages

--- a/Katalog.html
+++ b/Katalog.html
@@ -71,7 +71,7 @@ Special offers, Limited  prints">
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best free css templates</a></section><section class="header1 cid-rT7tYk5mIH" id="header16-7i">
+<section class="engine"><a href="https://mobirise.info/d">web maker</a></section><section class="header1 cid-rT7tYk5mIH" id="header16-7i">
 
     
 
@@ -524,7 +524,7 @@ mit einem Gewicht von über 45 kg von den Felsen namens "Die saal". Es ist ein b
                     </div>
                     <!--Btn-->
                     <div class="mbr-section-btn pt-3 align-left"><a href="https://mobirise.co" class="btn btn-warning-outline display-4">
-                            €300</a></div>
+                            SOLD</a></div>
                 </div>
             </div>
         </div>
@@ -852,7 +852,7 @@ mit einem Gewicht von über 45 kg von den Felsen namens "Die saal". Es ist ein b
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5">Der Junge in der roten Weste - eine Nachbildung&nbsp;<br>23 &nbsp;x 30<br>Nr. 1002</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">100% Collage mit einer Zeitung namens "Landbou Weekblad" in Afrikaans. &nbsp;Die Collage wurde 2020 mit Acrylfarbe restauriert. &nbsp;&nbsp;Der Druck erfolgt auf Hahnemühle-Papier. &nbsp;Leinwanddrucke können auch in jeder Größe bestellt werden - Preise werden auf Anfrage angegeben.<br><br><em>THE BOY IN THE RED VEST</em><br><em>100% collage with a newspaper called "Landbou Weekblad" in Afrikaans. The collage was restored in 2020 with acrylic paint. </em><em>The print is made on Hahnemühle paper.
+                        <p class="mbr-text mbr-fonts-style display-7">100% Collage mit einer Zeitung namens "Landbou Weekblad" in Afrikaans. &nbsp;Die Collage wurde 2020 mit Acrylfarbe restauriert. &nbsp;&nbsp;Der Druck erfolgt auf Hahnemühle-Papier. &nbsp;Leinwanddrucke können auch in jeder Größe bestellt werden - Preise werden auf Anfrage angegeben.<br><br><em>THE BOY IN THE RED VEST - A REPLICA (original not for sale)</em><br><em>100% collage with a newspaper called "Landbou Weekblad" in Afrikaans. The collage was restored in 2020 with acrylic paint. </em><em>The print is made on Hahnemühle paper.
 Canvas prints can also be ordered in any size - prices are given on request.</em><br><br><br><br>&nbsp;&nbsp;</p>
                     </div>
                     <div class="mbr-section-btn text-center"><a href="https://mobirise.co" class="btn btn-warning-outline display-4">
