--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ Referenzen">
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="cid-rQzkLLM6dN mbr-fullscreen mbr-parallax-background" id="header2-3c">
+<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="cid-rQzkLLM6dN mbr-fullscreen mbr-parallax-background" id="header2-3c">
 
     
 
@@ -110,13 +110,13 @@ Referenzen">
                 <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-1">Über mich ...</h1>
                 
                 <div class="mbr-section-text mbr-white pb-3 ">
-                    <p class="mbr-text mbr-fonts-style display-7"><em>Ich wurde im sonnigen Südafrika geboren und lebte dort, bis mein Mann und ich uns 2014 dauerhaft in der schönen Stadt Stuttgart niederließen. Seitdem bin ich Mitglied des Württembergischen Kunstvereins.
+                    <p class="mbr-text mbr-fonts-style display-7"><em>Ich wurde in SüdAfrika geboren und bin 2014 nach Deutschland gezogen. Als Freigeist war ich immer total süchtig nach dem Nervenkitzel des Schaffens. Natürlich wurde Kunst in der Schule als Fach ausgewählt, und für die Abschlussprüfung wurde ich von unserem Kunstlehrer für eine Auszeichnung nominiert - habe es aber leider nicht geschafft. Dann schrieb ich mich für einen Bachelor in Bildender Kunst an der Universität ein. Nach Abschluss des ersten Jahres wechselte ich mein Studium zum Modedesign und erhielt am Ende des Studiums ein Diplom. Ich begann als Designer in einer Brautboutique zu arbeiten und besaß 5 Jahre später meine eigene Modeboutique. Ich habe immer große mentale Sprünge gemacht und neue Dinge angefangen, also war das nur ein Anfang meiner Karriere.
 <br>
-<br>Schon in jungen Jahren habe ich es geliebt, Dinge zu schaffen, Kunst in der Schule als Fach gewählt und mich für einen BA-Abschluss in Bildender Kunst eingeschrieben. Nach Abschluss des ersten Jahres wechselte ich mein Studium zum Modedesign und erhielt mein Diplom. Ich begann als Designer zu arbeiten und&nbsp;</em>besaß <em>einige Jahre später meine eigene Modeboutique.&nbsp;Ich habe immer große mentale Sprünge gemacht und neue Dinge begonnen, so dass dies nur der Beginn einer sehr aufregenden Reise war, die mich zu wundervollen Orten, vielen Veränderungen und vielen Möglichkeiten führte.
+<br>Mein Umgang mit Kunst ist ähnlich. Infolgedessen ist „divers“ eine gute Beschreibung für meine gesamte Kunst. Das Hauptziel ist es, etwas zu schaffen, das eine Stimmung oder einen Charakter darstellt, oder auszudrücken, wie ich über das Thema denke. Es kann alles sein, von Porträts, Stadtlandschaften, wildem Leben, Blumen bis hin zu Abstraktem. Das Thema jeder Arbeit bestimmt spontan die Materialien und den Stil. Es ist jedoch immer wichtig, dass alles, was ich tue, irgendwie Sinn macht. Für mich ist Malen therapeutisch, ähnlich wie Meditation, und mein Weg, inneren Frieden zu finden.
 <br>
-<br>Das Lied&nbsp;"She is a free and gentle flower growing wild"&nbsp;bezieht sich auf mich, da ich mich tief und sensibel für andere fühle und total süchtig nach dem Nervenkitzel des Schaffens bin. Ich mag es, Bewegung und Bedeutung in meine Arbeit zu bringen und nicht in die Realität. Das Wort "vielfältig" beschreibt meine Kunst wirklich. Meine Motive können alles sein, von Porträts, Stadtlandschaften, wildem Leben, Blumen bis hin zu Abstraktem. Das Thema jeder Arbeit bestimmt spontan die Materialien und den Stil. Ich liebe Öl- und Acrylfarben als Basis, mag aber auch von Zeit zu Zeit Wasserfarben. Strukturpaste, Blattgold und andere Collagen werden häufig für die modernere Arbeit verwendet. Das Gemälde scheint durch die Verwendung dünner, aber sichtbarer Pinsel- oder Spachtelstriche lebendig zu werden, und es wird Wert auf die genaue Darstellung des Lichts in seinen sich ändernden Eigenschaften gelegt.
+<br>Mein Stil ist größtenteils impressionistisch, wurde jedoch in letzter Zeit an den Surrealismus angepasst, eine Maltechnik, die es dem Unbewussten ermöglicht, sich auszudrücken. Die abstrakte Arbeit ist normalerweise eine geplante Komposition, die rational und ruhig ist, wobei die Aufregung von der Spannung herrührt, die zwischen den Farben und Formen aufgebaut wird. Ich experimentiere auch mit verschiedenen Techniken mit Pinseln, Spachteln, Schwämmen und sogar meinen Fingern. Neben Öl, Acryl oder Wasserfarbe verwende ich auch gerne andere Medien wie Strukturpaste, Blattgold und Collagen speziell für meine abstrakte Arbeit.
 <br>
-<br>Es werden verschiedene Techniken und Stile verwendet, die von impressionistisch, idealistisch, expressionistisch und abstrakt reichen. Farben werden auch verwendet, um „Gefühle“ darzustellen - helle Farben für Glück, dunklere Farben für Traurigkeit. Das abstrakte Werk ist normalerweise eine geplante Komposition, die rational und ruhig ist. Die Aufregung kommt jedoch von der Spannung, die zwischen den Farben und Formen aufgebaut wird.</em><br></p>
+<br>Ich möchte die Erfahrung des Malens von Geschichten und der Einbeziehung von Emotionen in meine Arbeit erweitern.</em><br></p>
                 </div>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="index.html#testimonials5-3i">Referenzen</a></div>
             </div>
