create github pages

--- a/Katalog.html
+++ b/Katalog.html
@@ -71,7 +71,7 @@ Special offers, Limited  prints">
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="header1 cid-rT7tYk5mIH" id="header16-7i">
+<section class="engine"><a href="https://mobirise.info/z">best free css templates</a></section><section class="header1 cid-rT7tYk5mIH" id="header16-7i">
 
     
 
@@ -161,9 +161,9 @@ Special offers, Limited  prints">
 <div>150 x 120 cm&nbsp;</div><div>No. 1032</div></h2>
                     <div class="mbr-section-text">
                         <p class="mbr-text text1 pt-2 mbr-light mbr-fonts-style display-7">Ölfarbe auf Leinwand auf einem Holzrahmen montiert.
-<br><strong>Sie kamen zu einem esoterischen Tanz zusammen, in dem die Welt abfiel</strong><br></p>
+<br><strong>Liebe auf eine Weise zu kommunizieren, die keiner erlebt hat - sie kamen zu einem esoterischen Tanz zusammen, in dem die Welt abfiel</strong><br></p>
                         <p class="mbr-text text2 pt-4 mbr-light mbr-fonts-style display-7"><em>Oil paint on canvas
-<br><strong>They converged in an esoteric dance in which the world fell away</strong></em></p>
+<br><strong>Communicating love in a way neither have experienced - they converged in an esoteric dance in which the world fell away</strong></em></p>
                     </div>
                     <!--Btn-->
                     
@@ -189,8 +189,8 @@ Special offers, Limited  prints">
                 <div class="align-left aside-content">
                     <h2 class="mbr-title pt-2 mbr-fonts-style display-2">Amidst the chaos<br>150 x 120 cm<br>Nr. 1033&nbsp;</h2>
                     <div class="mbr-section-text">
-                        <p class="mbr-text text1 pt-2 mbr-light mbr-fonts-style display-7">Strukturpaste, Acrylfarbe auf Leinwand<br><strong>Die Qualen und Schmerzen, unter denen die Menschen heute leiden, leiden unter dem Chaos in der Welt - die Sonnenblume symbolisiert die Hoffnung</strong><br><br>Structure paste and acrylic paint on canvas
-<br><strong>The agony and pain people suffer because of the chaos in the world today - the sunflower symbolises hope</strong><br></p>
+                        <p class="mbr-text text1 pt-2 mbr-light mbr-fonts-style display-7">Strukturpaste, Acrylfarbe auf Leinwand<br><strong>Die Qual, der Schmerz und die Angst, die durch das Chaos in der heutigen Welt verursacht werden - die Sonnenblume symbolisiert die Hoffnung</strong><br><br>Structure paste and acrylic paint on canvas
+<br><strong>The agony, pain and fear caused by &nbsp;the chaos in the world today - the sunflower symbolises hope</strong><br></p>
                         <p class="mbr-text text2 pt-4 mbr-light mbr-fonts-style display-2"></p>
                     </div>
                     <!--Btn-->
