create github pages

--- a/Welcome E.html
+++ b/Welcome E.html
@@ -70,7 +70,7 @@ Testimonials">
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="cid-rSKztU4phD mbr-fullscreen mbr-parallax-background" id="header2-67">
+<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="cid-rSKztU4phD mbr-fullscreen mbr-parallax-background" id="header2-67">
 
     
 
