--- a/page1.html
+++ b/page1.html
@@ -137,21 +137,20 @@
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-figure" style="width: 200%;">
-                <img src="assets/images/1033-amidst-the-chaos-complete-698x544.jpg" alt="Mobirise">
+                <img src="assets/images/1033-the-black-hole-1381x1096.jpg" alt="Mobirise">
             </div>
 
             <div class="media-content">
-                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">Amidst the chaos&nbsp;</h1>
+                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">The black hole</h1>
                 
                 <div class="mbr-section-text mbr-white pb-3 ">
                     <p class="mbr-text mbr-fonts-style display-7"><br>150 x 120 cm
 <br>Nr. 1033 
 <br>Strukturpaste, Acrylfarbe auf Leinwand 
-<br>Die Qual, der Schmerz und die Angst, die durch das Chaos in der heutigen Welt verursacht werden - die Sonnenblume symbolisiert die Hoffnung 
-<br>
-<br><em>Structure paste and acrylic paint on canvas 
-<br>The agony, pain and fear caused by the chaos in the world today - the sunflower symbolises hope 
+<br><em>Vielleicht liegt die Antwort, um die Qual, den Schmerz und die Angst zu vermeiden, die durch das Chaos in der Welt verursacht werden, jenseits der Tore von Raum und Zeit. Fakt ist: Es gibt kein Entkommen, wenn Sie sich an der Stelle wiederfinden, an der Licht und Materie nur noch nach innen gelangen können! Gezeitenkräfte würden Ihren Körper in Atomstränge zerlegen (Spaghettifizierung) - das Objekt würde schließlich an der Singularität zerquetscht werden. Die Vorstellung, dass man irgendwo herausspringen könnte – vielleicht auf der anderen Seite – erscheint absolut phantastisch. 
 </em><br>
+<br>Structure paste and acrylic paint on canvas 
+<br><em>Perhaps the answer to avoid the agony, pain and fear caused by the chaos in the world lies beyond the gates of space and time. Fact is: there is no escape, should you find yourself at the point where light and matter can only pass inward! Tidal forces would reduce your body into strands of atoms (spaghettification) - you would eventually end up crushed at the singularity. The idea that you could pop out somewhere, perhaps on the other side, seems utterly fantastical.&nbsp;</em><br>
 <br>
 <br></p>
                 </div>
@@ -1139,7 +1138,7 @@ Ein Mohnfeld bei Sonnenuntergang&nbsp;</div></h1>
         </div>
     </div>
 
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/t" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Create a <a href="https://mobirise.site/y" style="color:#aaa;">website</a> with Mobirise</p></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/mbr-flip-card/mbr-flip-card.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/m" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Built with <a href="https://mobirise.site/b" style="color:#aaa;">Mobirise</a> theme</p></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/mbr-flip-card/mbr-flip-card.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
